# 2022-3-trabalho-grafos

./: .gitignore  CMakeLists.txt  README.md  testeasa.txt
input/: Entrada1.txt  Entrada3.txt  Entrada4.txt  Entrada_Intersecao.txt  Entrada_Sem_Peso_Vertices_Arestas.txt  Pert.txt  teste.txt
output/: Saida.dot  Saida.txt  testeS.txt
src/: Edge.cpp  Graph.cpp  Node.cpp  main.cpp  random.cpp
src/include/: Edge.h  FileUtils.h  Graph.h  GreedyAlgorithm.h  Metrics.h  Node.h  SortingMethods.h
tests/: TestSort.cpp
